--- a/css/style.css
+++ b/css/style.css
@@ -1,317 +1,96 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  color: #fff;
-  font-size: 1em;
-  font-family: "Gotham Rounded A", "Gotham Rounded B", "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #fff;
-  background-image: url("../img/farmer.png");
-  background-repeat: repeat;
-  margin: 0;
+    font-family: "Gotham Rounded A", "Gotham Rounded B", "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 header {
- background-color: grey;
- background-image: url("../img/green-fibers.png");
- background-repeat: repeat;
- width: 100%;
- height: 175px;
- position: relative;
- margin: 0;
- padding: 0;
+    position: relative;
+    height: 16vh;
+    min-height: 150px;
+    background: #7d9b79 url("../img/green-fibers.png") repeat;
+    margin: -8px;
+    color: #fff;
+}
+
+header h1, #main-navbar {
+    text-align: center;
 }
 
 header h1 {
-  float: right;
-  margin:20px;
+    width: 500px;
+    margin: 0 auto;
+    padding-top: 35px;
+    font-size: 50px;
 }
 
-header h1 a {
-  color: #fff;
-  text-decoration: none;
+header a, a:visited {
+    text-decoration: none;
+    color: #fff;
 }
 
-main {
-  width: 100%;
-  height: 100%;
-  /*padding: 40px 0 0;*/
-  margin: 5%;
-  margin-top: 30px;
+#main-navbar {
+    position: absolute;
+    bottom: -22.5px;
+    left: 20%;
+    right: 20%;
+    width: 60%;
+    height: 45px;
+    background-color: rgb(62, 114, 98);
+    margin: 0 auto;
+    border-radius: 3px;
 }
 
-h2 {
-  font-size: 2.5em;
-  font-weight: normal;
-  text-align: left;
-  padding-left: 20px;
-  color: #103517;
-  font-weight: bold;
+#main-navbar ul {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-main p {
-  font-size: 1.5em;
-  margin: 0;
-  line-height: 1.5;
+nav ul li {
+    position: relative;
+    display: inline-block;
+    height: 100%;
+    margin: 0 20px;
+    padding: 15px 10px 0;
 }
 
-.aud {
-  float: right;
-  padding: 12px;
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: -1px;
+    width: 120px;
+    background-color: rgba(62, 114, 98, .8);
+    margin-top: 11px;
+    text-align: left;
+    font-size: 1.2rem;
 }
 
-#activeUserDiv {
-  float: left;
+.dropdown-content ul {  
+    padding: 0;
 }
 
-#activeUserDiv a {
-  color: #fff;
-  text-decoration: none;
+.dropdown-content li {
+    display: block;
+    opacity: 1;
+    margin: 0;
+    padding: 8px 5px;
+    border-bottom: 1px solid #fff;
 }
 
-#activeUserDiv a:hover {
-  color: #26946E;
+#main-navbar li:hover, .dropdown-content li:hover {
+    cursor: pointer;
 }
 
-#searchBarDiv {
-  text-align: center;
-  font-size: 1.5em;
-  width: 600px;
-  /*padding: 50px 310px;*/
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 50px;
+#main-navbar li:hover {
+    background-color: rgb(33, 68, 57);
 }
 
-#searchBarDiv input {
-  height: 50px;
-  width: 600px;
-  font-size: 1em;
-  padding: 0.2em;
-  padding-left: 0.5em; 
-  border-radius: 15px;
-  border-color: #A5E0CC;
-}
-
-.dropDown {
-  background-color: #fff;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  width: 570px;
-}
-
-.mainNav {
-  display: block;
-  height: 50px;
-  width: 100%;
-  text-align: center;
-  font-size: 1.5em;
-  position: absolute;
-  margin-bottom: 10px;
-  bottom: 0;
-}
-
-.mainNav li {
-  display: inline;
-  padding: 28px;
-}
-
-.mainNav li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.mainNav li a:hover {
-  color: #26946E;
-}
-
-#booksDiv { 
-  width: 100%;
-  font-size: .8em;
-  line-height: 1.5;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-#booksDiv div {
-  display: inline-block;
-  float: left;
-  padding: 20px;
-  background-color: grey;
-  background-image: url("../img/tweed.png");
-  width:460px;
-  height: 290px;
-  margin: 10px;
-  border-radius: 5px;
-}
-
-#booksDiv div input {
-  font-size: 1em;
-  padding: 2px;
-  width: 340px;
-  float: right;
-  border-radius: 1px;
-  border-width: 0;
-}
-
-#booksDiv div ul {
-  list-style-type: none;
-}
-
-#booksDiv p span:hover {
-  color: grey;
-  cursor: pointer;
-}
-
-
-#usersDiv { 
-  width: 100%;
-  font-size: .8em;
-  line-height: 1.5;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-#usersDiv div {
-  display: inline-block;
-  float: left;
-  padding: 20px;
-  background-color: grey;
-  background-image: url("../img/tweed.png");
-  width:540px;
-  height: 190px;
-  margin: 10px;
-  border-radius: 5px;
-}
-
-
-#userMainDiv { 
-  width: 100%;
-  font-size: 1em;
-  line-height: 1.5;
-}
-
-
-#userMainDiv h2 {
-  color: #fff;
-  margin: 0;
-  padding: 0;
-}
-
-#userMainDiv h2 {
-  text-decoration: underline #26946E;
-}
-
-#userDiv {
-  display: inline-block;
-  float: left;
-  padding: 20px;
-  background-color: grey;
-  background-image: url("../img/tweed.png");
-  height: 100%;
-  width: 540px;
-  margin: 10px;
-  border-radius: 5px;
-}
-
-#booksCheckedOut  {
-  display: inline-block;
-  float: left;
-  font-size: .8em;
-  padding: 20px;
-  background-color: grey;
-  background-image: url("../img/tweed.png");
-  margin: 10px;
-  border-radius: 5px;
-}
-
-#previouslyBorrowed  {
-  display: inline-block;
-  float: left;
-  font-size: .8em;
-  padding: 20px;
-  background-color: grey;
-  background-image: url("../img/tweed.png");
-  margin: 10px;
-  border-radius: 5px;
-}
-
-.checkButton {
-  height: 40px;
-  width: 90px;
-  border-radius: 10px;
-  border-color: #544D3E;
-  border: none;
-  background-color: #FBF9F4;
-  transition: background-color .3s;
-  font-weight: bold;
-  margin-top: 10px;
-}
-
-.checkButton:hover {
-  background-color: #B3E9D7;
-  cursor: pointer;
-}
-
-.chkBtnTxt {
-  color: #DADD52;
-  float: right;
-  padding-top: 30px;
-  font-size: .7em;
-}
-
-.addButton {
-  float: right;
-  height: 40px;
-  width: 90px;
-  border-radius: 10px;
-  border-color: #544D3E;
-  border: none;
-  background-color: #0c8a3c;
-  color: #fff;
-  transition: background-color .3s;
-  font-weight: bold;
-  margin-top: 10px;
-  margin-left: 10px;
-}
-
-.addButton:hover {
-  background-color: #B3E9D7;
-  color: #252117;
-  cursor: pointer;
-}
-
-.cancelButton {
-  float: right;
-  height: 40px;
-  width: 90px;
-  border-radius: 10px;
-  border-color: #544D3E;
-  border: none;
-  background-color: #9e2929;
-  color: #fff;
-  transition: background-color .3s;
-  font-weight: bold;
-  margin-top: 10px;
-}
-
-.cancelButton:hover {
-  background-color: #e9b3b3;
-  color: #252117;
-  cursor: pointer;
-}
-
-#userBtn {
-  margin: 10px; 
-}
-
-#available {
-  color: #33C593;
-}
-
-#unavailable {
-  color: #DD003F;
+#main-navbar ul li:hover .dropdown-content {
+    display: block;
 }
