--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,12 @@ header {
     position: relative;
     height: 16vh;
     min-height: 150px;
-    background: #7d9b79 url("../img/green-fibers.png") repeat;
+    background: #121f10 url("../img/green-fibers.png") repeat;
     margin: -8px;
     color: #fff;
 }
 
-header h1, #main-navbar {
+header h1, #header-navbar {
     text-align: center;
 }
 
@@ -31,7 +31,21 @@ header a, a:visited {
     color: #fff;
 }
 
-#main-navbar {
+#activeUsersDiv {
+    position: absolute;
+    padding: 5px 0 0 5px;
+}
+
+#activeUsersDiv p {
+    padding: 0 0 2px 0;
+    margin: 0;
+}
+
+#activeUsersDiv span {
+    color: rgb(231 243 181);
+}
+
+#header-navbar {
     position: absolute;
     bottom: -22.5px;
     left: 20%;
@@ -43,19 +57,29 @@ header a, a:visited {
     border-radius: 3px;
 }
 
-#main-navbar ul {
-    width: 100%;
-    height: 100%;
+#header-navbar ul, nav ul li {
     display: inline-block;
+    height: 100%;
+}
+
+#header-navbar ul {
+    width: 100%; 
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
+#header-navbar li:hover {
+    cursor: pointer;
+    background-color: rgb(33, 68, 57);
+}
+
+#header-navbar ul li:hover .dropdown-content {
+    display: block;
+}
+
 nav ul li {
     position: relative;
-    display: inline-block;
-    height: 100%;
     margin: 0 20px;
     padding: 15px 10px 0;
 }
@@ -64,15 +88,11 @@ nav ul li {
     display: none;
     position: absolute;
     left: -1px;
-    width: 120px;
+    width: 150px;
     background-color: rgba(62, 114, 98, .8);
     margin-top: 11px;
     text-align: left;
     font-size: 1.2rem;
-}
-
-.dropdown-content ul {  
-    padding: 0;
 }
 
 .dropdown-content li {
@@ -83,14 +103,20 @@ nav ul li {
     border-bottom: 1px solid #fff;
 }
 
-#main-navbar li:hover, .dropdown-content li:hover {
-    cursor: pointer;
+.change-member .dropdown-content {
+    width: 200px;
 }
 
-#main-navbar li:hover {
-    background-color: rgb(33, 68, 57);
+.change-member .dropdown-content li,
+.change-member .dropdown-content input {
+    width: 100%;
+    height: 100%;
 }
 
-#main-navbar ul li:hover .dropdown-content {
-    display: block;
+.change-member .dropdown-content li {
+    padding: 5px;
+}
+
+main {
+    background: #fff url("../img/so-white.png") repeat;
 }
