--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@
 
 body {
     font-family: "Gotham Rounded A", "Gotham Rounded B", "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
 }
 
 header {
     position: relative;
     height: 16vh;
     min-height: 150px;
+    border-bottom: #2e3b37 solid 5px;
     background: #121f10 url("../img/green-fibers.png") repeat;
-    margin: -8px;
     color: #fff;
 }
 
@@ -45,9 +46,13 @@ header a, a:visited {
     color: rgb(231 243 181);
 }
 
+#header-navbar, .dropdown-content {
+    border: rgb(49, 90, 78) solid 1px;
+}
+
 #header-navbar {
     position: absolute;
-    bottom: -22.5px;
+    bottom: -25.5px;
     left: 20%;
     right: 20%;
     width: 60%;
@@ -89,7 +94,7 @@ nav ul li {
     position: absolute;
     left: -1px;
     width: 150px;
-    background-color: rgba(62, 114, 98, .8);
+    background-color: rgba(62, 114, 98, .95);
     margin-top: 11px;
     text-align: left;
     font-size: 1.2rem;
@@ -100,7 +105,7 @@ nav ul li {
     opacity: 1;
     margin: 0;
     padding: 8px 5px;
-    border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff;
 }
 
 .change-member .dropdown-content {
@@ -118,5 +123,99 @@ nav ul li {
 }
 
 main {
-    background: #fff url("../img/so-white.png") repeat;
+    display: block;
+    height: auto;
+    min-height: 80vh;
+    background: #fff url("../img/farmer.png") repeat;
+    padding-bottom: 20px;
+}
+
+#main-heading {
+    display: inline-block;
+    margin: 0;
+    background: #33413C;
+    color: #fff;
+    padding: 20px 20px;
+    border-top: gainsboro solid 1px;
+    border-bottom-right-radius: 5px;
+}
+
+.main-content, .item-div, #add-books-div {
+    border-radius: 5px;
+}
+
+.main-content {
+    display: block;
+    height: auto;
+    min-height: 70vh;
+    width: 95vw;
+    margin: 20px auto;
+    padding: 13px 1%;
+    background: #fff url("../img/cream_pixels.png") repeat;
+    border: gainsboro solid 1px;
+    text-align: center;
+}
+
+#add-books-div, .item-div {
+    display: inline-block;
+    border: rgb(71, 71, 71) solid 1px;
+    background: rgb(78, 78, 78) url("../img/tweed.png") repeat;
+    color: #fff;
+    text-align: left;
+    overflow: hidden;
+}
+
+.item-div {
+    width: auto;
+    min-width: 350px;
+    height: 290px;
+    margin: 5px 3px 0;
+    font-size: 1.2rem;
+}
+
+.item-div p {
+    margin: 5px;
+    padding: 0 10px;
+    line-height: 1.5;
+}
+
+#add-books-div {
+    width: 100%;
+    height: 300px;
+    text-align: left;
+}
+
+.available, .unavailable {
+    font-style: italic;
+}
+
+.available {
+    color: #68b699;
+}
+
+.unavailable {
+    color: #dd7575;
+}
+
+.selector-btn {
+    height: 30px;
+    width: 80px;
+    border-radius: 5px;
+    border: #4e4c4c solid 2px;
+    margin: 35px 0 12px 15px;
+    font-size: .8rem;
+}
+
+.selector-btn:hover {
+    background-color: #B3E9D7;
+    cursor: pointer;
+  }
+
+footer {
+    display: inline-block;
+    margin-bottom: -5px;
+    height: 30px;
+    width: 100%;
+    background: #121f10 url("../img/green-fibers.png") repeat;
+    color: #fff;
 }
