--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ header a, a:visited {
     left: 20%;
     right: 20%;
     width: 60%;
+    min-width: 750px;
     height: 45px;
     background-color: rgb(62, 114, 98);
     margin: 0 auto;
@@ -69,6 +70,7 @@ header a, a:visited {
 
 #header-navbar ul {
     width: 100%; 
+    min-width: 740px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -85,15 +87,17 @@ header a, a:visited {
 
 nav ul li {
     position: relative;
-    margin: 0 20px;
-    padding: 15px 10px 0;
+    padding: 15px 30px 0;
+}
+
+.dropdown-content, .dropdown-content li {
+    width: 150px;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
     left: -1px;
-    width: 150px;
     background-color: rgba(62, 114, 98, .95);
     margin-top: 11px;
     text-align: left;
@@ -108,11 +112,10 @@ nav ul li {
     border-top: 1px solid #fff;
 }
 
-.change-member .dropdown-content {
-    width: 200px;
+.change-member .dropdown-content, .change-member .dropdown-content li {
+    width: 230px;
 }
 
-.change-member .dropdown-content li,
 .change-member .dropdown-content input {
     width: 100%;
     height: 100%;
@@ -140,7 +143,7 @@ main {
     border-bottom-right-radius: 5px;
 }
 
-.main-content, .item-div, #add-books-div {
+.main-content, .item-div, #add-books-div, #add-items-div, .add-item-form-div, .add-book-search-div {
     border-radius: 5px;
 }
 
@@ -156,7 +159,7 @@ main {
     text-align: center;
 }
 
-#add-books-div, .item-div {
+#add-items-div, .item-div {
     display: inline-block;
     border: rgb(71, 71, 71) solid 1px;
     background: rgb(78, 78, 78) url("../img/tweed.png") repeat;
@@ -179,10 +182,76 @@ main {
     line-height: 1.5;
 }
 
-#add-books-div {
+#add-items-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 300px;
+    height: 350px;
     text-align: left;
+}
+
+.add-item-form-div, .add-book-search-div {
+    height: 80%;
+    background: gray url("../img/farmer.png") repeat;
+    color: #000;
+    margin: 0 auto;
+}
+
+.add-book-search-div, .add-item-form-div form{
+    display: grid;
+}
+
+.add-book-search-div {
+    width: 50%;
+    grid-template-columns: 5% 90% 5%;
+    grid-template-rows: 10% 30% 20% 30% 10%;
+}
+
+.add-book-search-div h2 {
+    grid-column: 2 / span 3;
+    grid-row: 2;
+    align-self: center;
+    margin: 0;
+}
+.add-book-search-div input {
+    grid-column: 2;
+    grid-row: 3;
+    align-self: center;
+    height: 80%;
+    font-size: 1.3em;
+    padding-left: 5px;
+}
+
+.add-book-search-div p {
+    grid-column: 2;
+    grid-row: 4;
+    align-self: center;
+}
+
+.add-item-form-div {
+    width: 40%;
+}
+
+.add-item-form-div form {
+    height: 90%;
+    margin: 1.5%;
+    grid-template-columns: 25% 75%;
+    grid-template-rows: repeat(10);
+    row-gap: 2px;
+}
+
+.add-item-form-div h3 {
+    grid-column: 1 / span 2;
+    margin: 5px 0 10px;
+}
+
+.add-item-form-div label {
+    grid-column: 1 / 2;
+}
+
+.add-item-form-div input {
+    grid-column: 2 / 2;
 }
 
 .available, .unavailable {
@@ -197,14 +266,25 @@ main {
     color: #dd7575;
 }
 
+.add-item-form-div .selector-btn {
+    grid-column: 2;
+    grid-row: 11;
+    justify-self: end;
+}
+
 .selector-btn {
     height: 30px;
     width: 80px;
     border-radius: 5px;
     border: #4e4c4c solid 2px;
+}
+
+.item-div .selector-btn {
     margin: 35px 0 12px 15px;
     font-size: .8rem;
 }
+
+
 
 .selector-btn:hover {
     background-color: #B3E9D7;
