--- a/css/style.css
+++ b/css/style.css
@@ -208,25 +208,36 @@ main {
     grid-template-rows: 10% 30% 20% 30% 10%;
 }
 
+.add-book-search-div h2, .add-book-search-div input, 
+    .add-book-search-div .selector-btn, .add-book-search-div p {
+        align-self: center;
+    }
+
 .add-book-search-div h2 {
     grid-column: 2 / span 3;
     grid-row: 2;
-    align-self: center;
     margin: 0;
 }
-.add-book-search-div input {
+
+.add-book-search-div input, .add-book-search-div .selector-btn {
     grid-column: 2;
     grid-row: 3;
-    align-self: center;
     height: 80%;
+}
+
+.add-book-search-div input {
     font-size: 1.3em;
     padding-left: 5px;
+}
+
+.add-book-search-div .selector-btn {
+    justify-self: end;
+    border-radius: 0 5px 5px 0;
 }
 
 .add-book-search-div p {
     grid-column: 2;
     grid-row: 4;
-    align-self: center;
 }
 
 .add-item-form-div {
@@ -234,8 +245,8 @@ main {
 }
 
 .add-item-form-div form {
-    height: 90%;
-    margin: 1.5%;
+    height: 100%;
+    padding: 1.5%;
     grid-template-columns: 25% 75%;
     grid-template-rows: repeat(10);
     row-gap: 2px;
