--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,8 @@ main {
     border-bottom-right-radius: 5px;
 }
 
-.main-content, .item-div, #add-books-div, #add-items-div, .add-item-form-div, .add-book-search-div {
+.main-content, .item-div, #add-books-div, #add-items-div, .add-item-form-div, 
+    .add-book-search-div, #check-in-out-modal, .check-out-modal-content {
     border-radius: 5px;
 }
 
@@ -169,12 +170,68 @@ main {
 }
 
 .item-div {
+    /* position: relative; */
     width: auto;
     min-width: 350px;
     height: 290px;
     margin: 5px 3px 0;
     font-size: 1.2rem;
 }
+
+/* #check-in-out-modal {
+    display: grid;
+    grid-template-columns: 2.5% 47.5% 47.5% 2.5%;
+    grid-template-rows: 2.5% 47.5% 47.5% 2.5%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.check-out-modal-content {
+    display: grid;
+    grid-template-columns: 5% 30% 30% 30% 5%;
+    grid-template-rows: 5% 30% 30% 30% 5%;
+    grid-column: 2 / span 2;
+    grid-row: 2 / span 2;
+    width: 100%;
+    height: 100%;
+    background: gray url("../img/farmer.png") repeat;
+    color: #000;
+}
+
+.check-out-modal-content h3 {
+    grid-column: 2 / span 3;
+    grid-row: 2;
+}
+
+.check-out-modal-content label, .check-out-modal-content input {
+    grid-row: 3;
+    align-self: center;
+}
+
+.check-out-modal-content label {
+    grid-column: 2;
+    font-size: .9rem; 
+}
+
+.check-out-modal-content input {
+    grid-column: 3 / span 2;
+    height: 40%;
+}
+
+#confirm-checkout-btn, #cancel-checkout-btn {
+    grid-row: 4;
+}
+
+#confirm-checkout-btn {
+    grid-column: 4;
+}
+
+#cancel-checkout-btn {
+    grid-column: 3;
+} */
 
 .item-div p {
     margin: 5px;
@@ -246,7 +303,7 @@ main {
 
 .add-item-form-div form {
     height: 100%;
-    padding: 1.5%;
+    padding: 3%;
     grid-template-columns: 25% 75%;
     grid-template-rows: repeat(10);
     row-gap: 2px;
@@ -294,8 +351,6 @@ main {
     margin: 35px 0 12px 15px;
     font-size: .8rem;
 }
-
-
 
 .selector-btn:hover {
     background-color: #B3E9D7;
