--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ header a, a:visited {
 
 #header-navbar ul {
     width: 100%; 
-    min-width: 740px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -91,10 +90,11 @@ nav ul li {
 }
 
 .dropdown-content, .dropdown-content li {
-    width: 150px;
+    width: 145px;
 }
 
 .dropdown-content {
+    z-index: 1;
     display: none;
     position: absolute;
     left: -1px;
@@ -144,7 +144,7 @@ main {
 }
 
 .main-content, .item-div, #add-books-div, #add-items-div, .add-item-form-div, 
-    .add-book-search-div, #check-in-out-modal, .check-out-modal-content {
+    .add-book-search-div, .check-out-modal, .check-out-modal-content {
     border-radius: 5px;
 }
 
@@ -170,15 +170,23 @@ main {
 }
 
 .item-div {
-    /* position: relative; */
+    position: relative;
     width: auto;
     min-width: 350px;
     height: 290px;
     margin: 5px 3px 0;
     font-size: 1.2rem;
+    
 }
 
-/* #check-in-out-modal {
+.user-has-span {
+    font-size: 0.9rem;
+    padding-left: 60px;
+    font-style: italic;
+    color: rgb(231 243 181);
+}
+
+.item-card-modal {
     display: grid;
     grid-template-columns: 2.5% 47.5% 47.5% 2.5%;
     grid-template-rows: 2.5% 47.5% 47.5% 2.5%;
@@ -187,6 +195,16 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
+    opacity: 0;
+    transition: opacity 100ms;
+
+    /* opacity: 1;
+    transition: opacity 100ms; */
+}
+
+.show-modal {
+    opacity: 1;
+    transition: opacity 100ms;
 }
 
 .check-out-modal-content {
@@ -231,7 +249,7 @@ main {
 
 #cancel-checkout-btn {
     grid-column: 3;
-} */
+}
 
 .item-div p {
     margin: 5px;
