--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap'); */
+
+/* @font-face {
+    font-family: 'Great Vibes', cursive;
+    src: url('../fonts/GreatVibes-Regular.ttf');
+} */
+
 * {
     box-sizing: border-box;
 }
@@ -21,6 +28,7 @@ header h1, #header-navbar {
 }
 
 header h1 {
+    font-family: 'Great Vibes';
     width: 500px;
     margin: 0 auto;
     padding-top: 35px;
@@ -144,14 +152,15 @@ main {
 }
 
 .main-content, .item-div, #add-books-div, #add-items-div, .add-item-form-div, 
-    .add-book-search-div, .check-out-modal, .check-out-modal-content {
+    .add-book-search-div, .check-out-modal, .check-out-modal-content,
+        .check-in-modal-content {
     border-radius: 5px;
 }
 
 .main-content {
     display: block;
     height: auto;
-    min-height: 70vh;
+    min-height: 334px;
     width: 95vw;
     margin: 20px auto;
     padding: 13px 1%;
@@ -207,7 +216,7 @@ main {
     transition: opacity 100ms;
 }
 
-.check-out-modal-content {
+.check-out-modal-content, .check-in-modal-content {
     display: grid;
     grid-template-columns: 5% 30% 30% 30% 5%;
     grid-template-rows: 5% 30% 30% 30% 5%;
@@ -237,6 +246,26 @@ main {
 .check-out-modal-content input {
     grid-column: 3 / span 2;
     height: 40%;
+}
+
+.check-out-modal-content .invalid-days {
+    display: none;
+    grid-column: 3 / span 2;
+    grid-row: 3;
+    align-self: end;
+    color: rgb(255, 0, 0);
+    font-size: .8rem;
+    font-style: italic;
+}
+
+.confirm-check-in-out {
+    text-align: center;
+}
+
+.check-out-modal-content span, .check-in-modal-content span {
+    grid-column: 2 / span 3;
+    grid-row: 1 / span 3;
+    align-self: center;
 }
 
 #confirm-checkout-btn, #cancel-checkout-btn {
@@ -294,18 +323,26 @@ main {
     margin: 0;
 }
 
-.add-book-search-div input, .add-book-search-div .selector-btn {
-    grid-column: 2;
-    grid-row: 3;
+.add-book-search-div form input, .add-book-search-div form .selector-btn {
+    grid-column: 1;
+    grid-row: 1;
     height: 80%;
 }
 
-.add-book-search-div input {
+.add-book-search-div form {
+    grid-column: 2;
+    grid-row: 3;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+}
+
+.add-book-search-div form input {
     font-size: 1.3em;
     padding-left: 5px;
 }
 
-.add-book-search-div .selector-btn {
+.add-book-search-div form .selector-btn {
     justify-self: end;
     border-radius: 0 5px 5px 0;
 }
@@ -338,6 +375,12 @@ main {
 
 .add-item-form-div input {
     grid-column: 2 / 2;
+}
+
+#search-results h2 {
+    margin: 0;
+    padding: 0 13px 16px;
+    text-align: left;
 }
 
 .available, .unavailable {
