--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ main {
 
 .main-content, .item-div, #add-books-div, #add-items-div, .add-item-form-div, 
     .add-book-search-div, .check-out-modal, .check-out-modal-content,
-        .check-in-modal-content {
+        .check-in-modal-content, .add-book-modal-content {
     border-radius: 5px;
 }
 
@@ -216,7 +216,7 @@ main {
     transition: opacity 100ms;
 }
 
-.check-out-modal-content, .check-in-modal-content {
+.check-out-modal-content, .check-in-modal-content, .add-book-modal-content {
     display: grid;
     grid-template-columns: 5% 30% 30% 30% 5%;
     grid-template-rows: 5% 30% 30% 30% 5%;
@@ -381,6 +381,48 @@ main {
     margin: 0;
     padding: 0 13px 16px;
     text-align: left;
+}
+
+.add-book-modal-content form {
+    grid-column: 2 / span 3;
+    grid-row: 2 / span 3;
+    display: grid;
+    grid-template-columns: 33% 34% 33% ;;
+    grid-template-rows: repeat(9);
+    row-gap: 1px;
+    font-size: 0.96rem;
+}
+
+.add-book-modal-content h3 {
+    margin: 0;
+    grid-column: 1 / 3;
+}
+
+.add-book-modal-content form label {
+    grid-column: 1 / 2;
+    align-self: center;
+}
+
+.add-book-modal-content form input {
+    grid-column: 2 / span 2;
+    justify-self: end;
+    width: 100%;
+}
+
+.add-book-modal-content form #add-book-cancel-btn,
+.add-book-modal-content form #add-book-confirm-btn {
+    margin: 10px 0 0 0;
+    grid-row: 9;
+    justify-self: end;
+    align-self: end;
+}
+
+.add-book-modal-content form #add-book-confirm-btn {
+    grid-column: 3;
+}
+
+.add-book-modal-content form #add-book-cancel-btn {
+    grid-column: 2;
 }
 
 .available, .unavailable {
