--- a/css/style.css
+++ b/css/style.css
@@ -222,13 +222,17 @@ main {
     justify-self: end;
     font-size: 0.9rem;
     font-style: italic;
-    color: rgb(231 243 181);
+    color: rgb(230, 255, 90);
+}
+
+.overdue {
+    color: rgb(255, 165, 0);
 }
 
 .item-card-modal {
     display: grid;
-    grid-template-columns: 2.5% 47.5% 47.5% 2.5%;
-    grid-template-rows: 2.5% 47.5% 47.5% 2.5%;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
     position: absolute;
     top: 0;
     left: 0;
@@ -248,40 +252,43 @@ main {
 
 .check-out-modal-content, .check-in-modal-content, .add-book-modal-content {
     display: grid;
-    grid-template-columns: 5% 30% 30% 30% 5%;
-    grid-template-rows: 5% 30% 30% 30% 5%;
-    grid-column: 2 / span 2;
-    grid-row: 2 / span 2;
+    grid-template-columns: 33% 34% 33%;
+    grid-template-rows: 33% 34% 33%;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
     width: 100%;
     height: 100%;
+    padding: 10px;
     background: gray url("../img/farmer.png") repeat;
     color: #000;
 }
 
 .check-out-modal-content h3 {
-    grid-column: 2 / span 3;
-    grid-row: 2;
+    grid-column: 1 / span 3;
+    grid-row: 1;
 }
 
 .check-out-modal-content label, .check-out-modal-content input {
-    grid-row: 3;
+    grid-row: 2;
     align-self: center;
 }
 
 .check-out-modal-content label {
-    grid-column: 2;
-    font-size: .9rem; 
+    grid-column: 1;
+    font-size: .9rem;
+    padding-right: 14px;
+    text-align: right;
 }
 
 .check-out-modal-content input {
-    grid-column: 3 / span 2;
+    grid-column: 2 / span 2;
     height: 40%;
 }
 
 .check-out-modal-content .invalid-days {
     display: none;
-    grid-column: 3 / span 2;
-    grid-row: 3;
+    grid-column: 2 / span 2;
+    grid-row: 2;
     align-self: end;
     color: rgb(255, 0, 0);
     font-size: .8rem;
@@ -293,21 +300,21 @@ main {
 }
 
 .check-out-modal-content span, .check-in-modal-content span {
-    grid-column: 2 / span 3;
+    grid-column: 1 / span 3;
     grid-row: 1 / span 3;
     align-self: center;
 }
 
 #confirm-checkout-btn, #cancel-checkout-btn {
-    grid-row: 4;
+    grid-row: 3;
 }
 
 #confirm-checkout-btn {
-    grid-column: 4;
+    grid-column: 3;
 }
 
 #cancel-checkout-btn {
-    grid-column: 3;
+    grid-column: 2;
 }
 
 /* .item-div p {
@@ -414,10 +421,10 @@ main {
 }
 
 .add-book-modal-content form {
-    grid-column: 2 / span 3;
-    grid-row: 2 / span 3;
+    grid-column: 1 / span 3;
+    grid-row: 1 / span 3;
     display: grid;
-    grid-template-columns: 33% 34% 33% ;;
+    grid-template-columns: minmax(78px, 78px) 1fr 100px;
     grid-template-rows: repeat(9);
     row-gap: 1px;
     font-size: 0.96rem;
