--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ main {
 
 .check-out-modal-content, .check-in-modal-content, .add-book-modal-content {
     display: grid;
-    grid-template-columns: 33% 34% 33%;
+    grid-template-columns: minmax(100px, 50px) 1fr 100px 100px;
     grid-template-rows: 33% 34% 33%;
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
@@ -264,7 +264,7 @@ main {
 }
 
 .check-out-modal-content h3 {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 4;
     grid-row: 1;
 }
 
@@ -274,14 +274,14 @@ main {
 }
 
 .check-out-modal-content label {
-    grid-column: 1;
+    grid-column: 1 / span 2;
     font-size: .9rem;
     padding-right: 14px;
     text-align: right;
 }
 
 .check-out-modal-content input {
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
     height: 40%;
 }
 
@@ -300,7 +300,7 @@ main {
 }
 
 .check-out-modal-content span, .check-in-modal-content span {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 4;
     grid-row: 1 / span 3;
     align-self: center;
 }
@@ -310,11 +310,11 @@ main {
 }
 
 #confirm-checkout-btn {
-    grid-column: 3;
+    grid-column: 4;
 }
 
 #cancel-checkout-btn {
-    grid-column: 2;
+    grid-column: 3;
 }
 
 /* .item-div p {
@@ -421,7 +421,7 @@ main {
 }
 
 .add-book-modal-content form {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 4;
     grid-row: 1 / span 3;
     display: grid;
     grid-template-columns: minmax(78px, 78px) 1fr 100px;
@@ -460,6 +460,12 @@ main {
 
 .add-book-modal-content form #add-book-cancel-btn {
     grid-column: 2;
+}
+
+.confirm-add-item {
+    grid-column: 1 / span 4;
+    grid-row: 2;
+    text-align: center;
 }
 
 .available, .unavailable {
