--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ main {
 }
 
 .add-item-form-div {
+    position: relative;
     width: 40%;
 }
 
@@ -418,6 +419,14 @@ main {
     margin: 0 100% 0 0;
     padding: 0 13px 16px;
     text-align: left;
+}
+
+.add-book-manual-modal {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height:100%
 }
 
 .add-book-modal-content form {
