--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,9 @@ main {
     margin: 0;
     background: #33413C;
     color: #fff;
-    padding: 20px 20px;
+    width: 210px;
+    text-align: center;
+    padding: 10px 20px;
     border-top: gainsboro solid 1px;
     border-bottom-right-radius: 5px;
 }
@@ -183,7 +185,7 @@ main {
 .item-div {
     display: grid;
     position: relative;
-    grid-template-columns:  minmax(80px, 80px) 1fr 30%;
+    grid-template-columns:  minmax(80px, 80px) 1fr 100px;
     grid-template-rows: repeat(9, 1fr);
     width: fit-content;
     min-width: 350px;
@@ -202,7 +204,7 @@ main {
 }
 
 .item-div span {
-    grid-column: 2 / span 2;
+    grid-column: 2 / span 3;
 }
 
 .item-div p {
