--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header a, a:visited {
     width: 60%;
     min-width: 750px;
     height: 45px;
-    background-color: rgb(62, 114, 98);
+    background: rgb(62, 114, 98) url("../img/green-fibers-trans.png");
     margin: 0 auto;
     border-radius: 3px;
 }
@@ -96,6 +96,7 @@ header a, a:visited {
 
 nav ul li {
     position: relative;
+    text-shadow: 1px 2px 7px #3a3a3a;
     padding: 15px 30px 0;
 }
 
@@ -108,7 +109,7 @@ nav ul li {
     display: none;
     position: absolute;
     left: -1px;
-    background-color: rgba(62, 114, 98, .95);
+    background: rgb(62, 114, 98) url("../img/green-fibers-trans.png");
     margin-top: 10px;
     text-align: left;
     font-size: 1.2rem;
@@ -146,7 +147,7 @@ main {
 #main-heading {
     display: inline-block;
     margin: 0;
-    background: #33413C;
+    background: #33413C url("../img/green-fibers-trans.png");
     color: #fff;
     width: 230px;
     text-align: center;
@@ -154,6 +155,7 @@ main {
     border-top: gainsboro solid 1px;
     border-bottom-right-radius: 5px;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    text-shadow: 1px 2px 7px #131313;
 }
 
 .main-content, .item-div, #add-books-div, .sub-content, .add-item-form-div, 
